--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -142,9 +142,11 @@
 
 \linenumbers
 
-\authornote{Add complete departmental affiliations for each author here. Each new line herein must be indented, like this line.
+\authornote{Chuan-Peng Hu, Department of Psychology, Tsinghua University, 100084 Beijing, China; Germany Resilience Center, 55131 Mainz, Germany.
+Kaiping Peng, Department of Psychology, Tsinghua University, 100084 Beijing, China.
+Jie Sui, Department of Psychology, the University of Bath, Bath, UK.
 
-Enter author note here.
+Authors contriubtion: CPH, JS, \& KP design the study, CPH collected the data, CPH analyzed the data and drafted the manuscript. KP \& JS supported this project.
 
 Correspondence concerning this article should be addressed to Chuan-Peng Hu, 55131. E-mail: \href{mailto:hcp4715@email.com}{\nolinkurl{hcp4715@email.com}}}
 
@@ -246,7 +248,7 @@ We found the effect of Valence (\(F(2, 90) = 5.51\), \(\mathit{MSE} = 0.26\), \(
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-2}A really beautiful ANOVA table.}
+\caption{\label{tab:unnamed-chunk-1}A really beautiful ANOVA table.}
 \begin{tabular}{lllllll}
 \toprule
 Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1$} & \multicolumn{1}{c}{$\mathit{df}_2$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
@@ -294,55 +296,97 @@ In this study, we aimed at excluding the potential confouding factor of the fami
 \subsubsection{Stimuli and Tasks}\label{stimuli-and-tasks-1}}
 
 Three geometric shapes (triangle, square, and circle, with 3.7º × 3.7º of visual angle) were presented above a white fixation cross subtending 0.8º × 0.8º of visual angle at the center of the screen. The three shapes were randomly assigned to three labels with different moral valence: a morally bad person (\enquote{恶人}, ERen), a morally good person (\enquote{善人}, ShanRen) or a morally neutral person (\enquote{常人}, ChangRen). The order of the associations between shapes and labels was counterbalanced across participants.
-Three labels used in this experiment is selected based on the rating results from an independent survey, in which participants rated the familiarity, frequency, and concreteness of eight different words online. Of the eight words, three of them are morally positive (HaoRen, ShanRen, Junzi), two of them are morally neutral (ChangRen, FanRen), and three of them are morally negative (HuaiRen, ERen, LiuMang). An independent sample consist of 35 participants (22 females, age 20.6 ± 3.11) were recruited to rate these words. Based on the ratings (see Figure 1), we selected ShanRen, ChangRen, and ERen to represent morally positve, neutral, and negative person.
-
-Table 1b-1. Ratings of familarity, frequencies and concreteness for different labels that share similar meanings (n = 35).
-Label Familiarity frequencies concreteness
-HaoRen 6.31 (1.01) 5.85 (1.24) 4.71 (1.83)
-HuaiRen 6 (1.44) 4.68 (1.85) 4.51 (1.96)
-ChangRen 5.49 (1.41) 4.4 (1.63) 4.28 (1.88)
-ShanReng 4.89 (1.42) 2.8 (1.6) 4.57 (1.59)
-Eren 5.08 (1.65) 2.69 (1.85) 4.6 (1.59)
+Three labels used in this experiment is selected based on the rating results from an independent survey, in which participants rated the familiarity, frequency, and concreteness of eight different words online. Of the eight words, three of them are morally positive (HaoRen, ShanRen, Junzi), two of them are morally neutral (ChangRen, FanRen), and three of them are morally negative (HuaiRen, ERen, LiuMang). An independent sample consist of 35 participants (22 females, age 20.6 ± 3.11) were recruited to rate these words. Based on the ratings (see supplementary materials Figure S1), we selected ShanRen, ChangRen, and ERen to represent morally positve, neutral, and negative person.
 
 \hypertarget{procedure-1}{%
 \subsubsection{Procedure}\label{procedure-1}}
 
 For participants from both Tsinghua community and Wenzhou community, the procedure in the current study was exactly same as in experiment 1a. For participants in Tsinghua community, they finished a survey suite include personal distance, objective and subjective SES, belief in just world (Wu et al., 2011), disgust senstivity scale (谭永红 et al., 2007), trait justice (Wu et al., 2014), and cognitive reflection test (Frederick, 2005). For participants from Wenzhou community, they finished exactly the same questionnaires as the participants from Wenzhou University in experiment 1a.
-\#\# Analysis
+
+\hypertarget{data-analysis-2}{%
+\subsection{Data Analysis}\label{data-analysis-2}}
+
 Data was analyzed as in experiment 1a.
 
 \hypertarget{results-1}{%
 \subsection{Results}\label{results-1}}
 
+We replicated the advantage of positive condition in experiment 1a.
+
 \hypertarget{analaysis-of-d-prime.-1}{%
 \subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-1}}
 
-We conducted a single factor (Valence: good, neutral, bad) repeated measure ANOVA:
+There was evidence for the main effect of valence, \(F(2, 98) = 13.54\), \(\mathit{MSE} = 0.16\), \(p < .001\), \(\hat{\eta}^2_G = .051\). Paired t test showed that the Good-Person condition (1.9 \(\pm\) 0.104) was with greater \emph{d} prime than Netural condition (1.49 \(\pm\) 0.1, \emph{t}(49) = 5.583, \emph{p} \textless{} 0.001, Cohen's \emph{d} = 0.415). We also found that the Bad-Person condition (1.71 \(\pm\) 0.11) has also greater \emph{d} prime than neutral condition , \emph{t}(49) = -3.106, \emph{p} = 0.008, Cohen's \emph{d} = -0.229). There was no-significant difference between Good and bad conidition, \emph{t}(49) = 2.05, \emph{p} = 0.11.
 
-We found the effect of Valence (\(F(2, 98) = 13.54\), \(\mathit{MSE} = 0.16\), \(p < .001\), \(\hat{\eta}^2_G = .051\)).
+\hypertarget{analaysis-of-reaction-time.-1}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-1}}
 
-We further examined the effect of valence.
+The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
 
-contrast estimate SE df t.ratio p.value
-Good - Neutral 0.415 0.0743 49 5.583 \textless{}.0001
-Good - Bad 0.185 0.0904 49 2.052 0.1107
-Neutral - Bad -0.229 0.0739 49 -3.106 0.0087
+We found intercation between Matchness and Valence (\(F(1.96, 96.17) = 19.69\), \(\mathit{MSE} = 951.43\), \(p < .001\), \(\hat{\eta}^2_G = .034\)) and then analyzed the matched trials and mismatched trials separately, as in experiment 1a.
 
-P value adjustment: tukey method for comparing a family of 3 estimates
-The Good condition (1.9 \(\pm\) 0.104) is great than Netural condition (1.49 \(\pm\) 0.1, t(49) = 5.583, p \textless{} 0.001, Cohen's d = 0.415), Neutral and bad condition (1.71 \(\pm\) 0.11, t(49) = -3.106, p = 0.008, Cohen'd = -0.229). This is no-significant difference between Good and bad conidition, t(49) = 2.05, p = 0.11.
+For matched trials, we found the effect of valence \(F(1.93, 94.72) = 34.31\), \(\mathit{MSE} = 1,358.30\), \(p < .001\), \(\hat{\eta}^2_G = .125\). For non-matched trials, there was no significant effect of Valence (\(F(1.93, 94.41) = 1.86\), \(\mathit{MSE} = 421.38\), \(p = .163\), \(\hat{\eta}^2_G = .004\)).
+
+Post-hoc \emph{t}-tests revealed that shapes associated with Good Person (686 \(\pm\) 8.97) were responded faster than Neutral-Person (743 \(\pm\) 9.66), (\emph{t}(49) = -8.379, \emph{p} \textless{} 0.001) and Bad Person (730 \(\pm\) 9.11), \emph{t}(49) = -5.632, \emph{p} \textless{} 0.0001). While there was no significant differences between Neutral and Bad-Person condition (\emph{t}(49) = 1.83, \emph{p} = 0.171).
+
+\hypertarget{discussion}{%
+\subsection{Discussion}\label{discussion}}
+
+These results confirmed the facilitation effect of positive moral valence on the perceptual matching task. This pattern of results mimic prior results demonstrating self-bias effect on perceptual matching (Sui et al., 2012) and in line with previous studies that indirect learning of other's moral reputation do have influence on our subsequence behavior (Fouragnan et al., 2013).
+
+\hypertarget{experiment-1c}{%
+\section{Experiment 1c}\label{experiment-1c}}
+
+In this study, we further control the valence of words using in our experiment. Instead of using label with moral valence, we used valence-neutral names in China. Participant first learn behaviors of the different person, then, they associate the names and shapes. And then they perform a name-shape matching task.
+
+\hypertarget{method-1}{%
+\subsection{Method}\label{method-1}}
+
+\hypertarget{participants-2}{%
+\subsubsection{Participants}\label{participants-2}}
+
+23 college students (15 female, age = 22.61 \(\pm\) 2.62 years) participated. All of them were recruited from Tsinghua University community in 2014. Informed consent was obtained from all participants prior to the experiment according to procedures approved by the local ethics committees. No participant was excluded because they overall accuracy were above 0.6.
+
+\hypertarget{stimuli-and-tasks-2}{%
+\subsubsection{Stimuli and Tasks}\label{stimuli-and-tasks-2}}
+
+Three geometric shapes (triangle, square, and circle, with 3.7º × 3.7º of visual angle) were presented above a white fixation cross subtending 0.8º × 0.8º of visual angle at the center of the screen. The three most common names were chosen, which are neutral in moral valence before the manipulation.
+Three names (Zhang, Wang, Li) were first paired with three paragraphs of behavioral description. Each description includes one sentence of biographic infomration and four sentences that describing the moral behavioral under that name. To assess the that these three descriptions represented good, neutral, and bad valence, we collected the ratings of three person on six dimensions: morality, likability, trustworthiness, dominance, competence, and aggressiviess, from an independent sample (n = 34, 18 female, age = 19.6 ± 2.05). The rating results showed that the person with morally good behavioral description has higher score on morality (M = 3.59, SD = 0.66) than neutral (M = 0.88, SD = 1.1), \emph{t}(33) = 12.94, \emph{p} \textless{} .001, and bad conditions (M = -3.4, SD = 1.1), \emph{t}(33) = 30.78, \emph{p} \textless{} .001. Neutral condition was also significant higher than bad conditions \emph{t}(33) = 13.9, \emph{p} \textless{} .001 (See supplementary materials).
+
+\hypertarget{procedure-2}{%
+\subsubsection{Procedure}\label{procedure-2}}
+
+After arriving the lab, participants were informed to complete two experimental tasks, first a social memory task to remember three person and their behaviors, after tested for their memory, they will finish a perceptual matching task.
+In the social memory task, the descriptions of three person were presented without time limitation. Participant self-paced to memorized the behaviors of each person. After they memorizing, a recognition task was used to test their memory effect. Each participant was required to have over 95\% accuracy before preceding to matching task.
+The perceptual learning task was followed, three names were randomly paired with geometric shapes. Participants were required to learn the association and perform a practicing task before they start the formal experimental blocks. They kept practicing util they reached 70\% accuracy. Then, they would start the perceptual matching task as in experiment 1a. They finished 6 blocks of perceptual matching trials, each have 120 trials.
+
+\hypertarget{data-analysis-3}{%
+\subsection{Data Analysis}\label{data-analysis-3}}
+
+Data was analyzed as in experiment 1a.
+
+\hypertarget{results-2}{%
+\subsection{Results}\label{results-2}}
+
+We didn't found effect of valence on \emph{d} prime, \(F(2, 44) = 0.23\), \(\mathit{MSE} = 0.40\), \(p = .798\), \(\hat{\eta}^2_G = .005\). Also no effect of valence on RT (\(F(1.63, 35.81) = 0.22\), \(\mathit{MSE} = 2,212.71\), \(p = .761\), \(\hat{\eta}^2_G = .001\)) or interaction between valence and matchness on RT (\(F(1.79, 39.43) = 1.20\), \(\mathit{MSE} = 1,973.91\), \(p = .308\), \(\hat{\eta}^2_G = .005\)).
+
+\hypertarget{discussion-1}{%
+\subsection{Discussion}\label{discussion-1}}
+
+Experiment 1c was not finished, with limited participants, it may not provide a rigirous test for the effect. (move to supplementary?)
 
 \hypertarget{experiment-4a}{%
 \section{Experiment 4a}\label{experiment-4a}}
 
 In study 1-3 participants made explicit judgements about moral associations. In Experiment 4, we examined whether the effects of moral valence occur even when the moral valence information might not be relevent to the task. In this study participants made perceptual match judgements to associations between self-referential labels and shapes (cf.~Sui et al., 2012), but we presented labels of different moral valence levels in the shapes.
 
-\hypertarget{participants-2}{%
-\subsection{Participants}\label{participants-2}}
+\hypertarget{participants-3}{%
+\subsection{Participants}\label{participants-3}}
 
 64 participants (37 female, age = 19.7 \(\pm\) 1.22) participated the current study, 32 of them were from Tsinghua Universtiy in 2015, the rest were from Wenzhou University parpticipated in 2017. All participants were right-handed, and all had normalneutral or corrected-to-normalneutral vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. The data of three participants from Tsinghua site and two participants from Wenzhou site were excluded from analysis because their accuracy was close to chance (\textless{} 0.6). The results for the remaining 59 participants (33 female, age = 19.78 \(\pm\) 1.2) were analyzed and reported.
 
-\hypertarget{results-2}{%
-\subsection{Results}\label{results-2}}
+\hypertarget{results-3}{%
+\subsection{Results}\label{results-3}}
 
 \hypertarget{analaysis-of-d-prime.-2}{%
 \subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-2}}
@@ -354,7 +398,7 @@ We found the effect of identity (\(F(1, 58) = 121.04\), \(\mathit{MSE} = 0.48\),
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-6}A really beautiful ANOVA table.}
+\caption{\label{tab:unnamed-chunk-5}A really beautiful ANOVA table.}
 \begin{tabular}{lllllll}
 \toprule
 Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1$} & \multicolumn{1}{c}{$\mathit{df}_2$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
@@ -374,8 +418,8 @@ Identity $\times$ Morality & 4.12 & 2 & 116 & 0.14 & .019 & .004\\
 
 We further examined the effect of valence for both self and other.
 
-\hypertarget{analaysis-of-reaction-time.-1}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-1}}
+\hypertarget{analaysis-of-reaction-time.-2}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-2}}
 
 We conducted 2 (Matchness: match v. mismatch) by 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
@@ -390,7 +434,7 @@ For non-matched trials, there was no significant effect. Morality (\(F(1, 58) = 
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-8}A really beautiful ANOVA table.}
+\caption{\label{tab:unnamed-chunk-7}A really beautiful ANOVA table.}
 \begin{tabular}{lllllll}
 \toprule
 Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1^{GG}$} & \multicolumn{1}{c}{$\mathit{df}_2^{GG}$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
@@ -438,11 +482,11 @@ Other - Self 72.2 7.06 58 10.231 \textless{}.0001
 \hypertarget{experiment-4b}{%
 \section{Experiment 4b:}\label{experiment-4b}}
 
-\hypertarget{participants-3}{%
-\subsection{Participants}\label{participants-3}}
+\hypertarget{participants-4}{%
+\subsection{Participants}\label{participants-4}}
 
-\hypertarget{results-3}{%
-\subsection{Results}\label{results-3}}
+\hypertarget{results-4}{%
+\subsection{Results}\label{results-4}}
 
 \hypertarget{analaysis-of-d-prime.-3}{%
 \subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-3}}
@@ -464,7 +508,7 @@ Morality (\(F(1.59, 69.94) = 2.34\), \(\mathit{MSE} = 0.48\), \(p = .115\), \(\h
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
-\caption{\label{tab:unnamed-chunk-10}A really beautiful ANOVA table.}
+\caption{\label{tab:unnamed-chunk-9}A really beautiful ANOVA table.}
 \begin{tabular}{lllllll}
 \toprule
 Effect & \multicolumn{1}{c}{$F$} & \multicolumn{1}{c}{$\mathit{df}_1^{GG}$} & \multicolumn{1}{c}{$\mathit{df}_2^{GG}$} & \multicolumn{1}{c}{$\mathit{MSE}$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$\hat{\eta}^2_G$}\\
@@ -488,48 +532,18 @@ We further examined the effect of valence for both self and other.
 \begin{Highlighting}[]
 \NormalTok{m2 <-}\StringTok{ }\NormalTok{emmeans}\OperatorTok{::}\KeywordTok{emmeans}\NormalTok{(df4b_dprime_anova, }\StringTok{"Morality"}\NormalTok{, }\DataTypeTok{by =} \StringTok{"Identity"}\NormalTok{) }\CommentTok{# compare each valence for both self and other condition}
 \CommentTok{#pairs(m2)}
-\KeywordTok{summary}\NormalTok{(}\KeywordTok{as.glht}\NormalTok{(}\KeywordTok{pairs}\NormalTok{(m2)), }\DataTypeTok{test=}\KeywordTok{adjusted}\NormalTok{(}\StringTok{"free"}\NormalTok{))}
-\end{Highlighting}
-\end{Shaded}
+\CommentTok{#summary(as.glht(pairs(m2)), test=adjusted("free"))}
 
-\$\texttt{Identity\ =\ Other}
-
-\begin{verbatim}
- Simultaneous Tests for General Linear Hypotheses
-\end{verbatim}
-
-Linear Hypotheses:
-Estimate Std. Error t value Pr(\textgreater{}\textbar{}t\textbar{})
-Good - Neutral == 0 0.13423 0.09023 1.49 0.29
-Good - Bad == 0 0.14137 0.13188 1.07 0.42
-Neutral - Bad == 0 0.00714 0.09949 0.07 0.94
-(Adjusted p values reported -- free method)
-
-\$\texttt{Identity\ =\ Self}
-
-\begin{verbatim}
- Simultaneous Tests for General Linear Hypotheses
-\end{verbatim}
-
-Linear Hypotheses:
-Estimate Std. Error t value Pr(\textgreater{}\textbar{}t\textbar{})
-Good - Neutral == 0 0.1697 0.0897 1.89 0.12
-Good - Bad == 0 0.2365 0.1154 2.05 0.11
-Neutral - Bad == 0 0.0668 0.0872 0.77 0.45
-(Adjusted p values reported -- free method)
-
-\begin{Shaded}
-\begin{Highlighting}[]
 \NormalTok{m3 <-}\StringTok{ }\KeywordTok{emmeans}\NormalTok{(df4b_dprime_anova, }\StringTok{"Identity"}\NormalTok{, }\DataTypeTok{by =} \StringTok{"Morality"}\NormalTok{) }\CommentTok{# compare self vs. other for each valence condition}
 \CommentTok{#pairs(m3)}
 \end{Highlighting}
 \end{Shaded}
 
-\hypertarget{results-4}{%
-\section{Results}\label{results-4}}
+\hypertarget{results-5}{%
+\section{Results}\label{results-5}}
 
-\hypertarget{discussion}{%
-\section{Discussion}\label{discussion}}
+\hypertarget{discussion-2}{%
+\section{Discussion}\label{discussion-2}}
 
 \newpage
 
